Agregar Registro y Login a esquema principal

--- a/site/src/views/Registro.ejs
+++ b/site/src/views/Registro.ejs
@@ -10,7 +10,7 @@
   
     
     <!--FORMULARIO---->
-    <form class="form">
+    <form class="form-reg-log">
         
         <!--TITULO------------------------>
         <h1 class="titulo">Registrarse</h1>
@@ -30,7 +30,7 @@
         <!--YA-TENGO-CUENTA----------------------------------------------------------->
         <p class="tengo-cuenta"><a href="" class="tengo-cuenta">Ya tengo cuenta</a></p>
         
-      </form>
+    </form>
 
 
       
