--- a/site/src/views/orders/myorders.ejs
+++ b/site/src/views/orders/myorders.ejs
@@ -4,6 +4,7 @@
 <body>
     <header>
         <%- include('../partials/header') %>
+        <%- include('../partials/categoriesCarouselDesktop') %>
         <%- include('../partials/categoriesCarousel') %>
     </header>
 <div> <!-- Contenedor principal -->
