--- a/site/src/views/partials/header.ejs
+++ b/site/src/views/partials/header.ejs
@@ -13,13 +13,15 @@
                 </div>
             
             <div><%- include('searcher') %></div>
-        <div id="carrito">
-            <div id="cart-amount" class="total-carrito">$ 0</div>
-            <div><i class="fas fa-shopping-cart"></i>
+        <a style="text-decoration: none; a:visited; color: black; font-family: arial; text-decoration: none; " href='/mi-carrito'>
+            <div id="carrito">
+                <div id="cart-amount" class="total-carrito">$ 0</div>
+                <div><i class="fas fa-shopping-cart"></i>
+                </div>
+                <div class="circulo-rojo centrar-hijos-vertical-horizontal">
+                    <div id="cart-elements" class="inline-block blanco-negrita">0</div>
+                </div>
             </div>
-            <div class="circulo-rojo centrar-hijos-vertical-horizontal">
-                <div id="cart-elements" class="inline-block blanco-negrita">0</div>
-            </div>
-        </div>
+        </a>
     </div>
 </div>
