--- a/site/public/styles/RegistroLogin.css
+++ b/site/public/styles/RegistroLogin.css
@@ -1,13 +1,13 @@
 /*--ACOMODANDO-MARGENES-PADDING--*/
-*{
+/* *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Open sans';
 }
+ */
 
-
-body{
+/* body{
    
     background-position: center center;
     background-repeat: no-repeat;
@@ -18,41 +18,35 @@ body{
     flex-direction:row;
     justify-content: center;
 }
-
+ */
 /*--FORMULARIO-------------------*/
-.form{
+.form-reg-log{
     width: 450px;
     padding: 30px;
     margin: auto;
     margin-top: 100px;
     background: rgba(43, 224, 170, 0.3);
     border-radius: 20px;
-    margin-left: 50px;
-
-    
 }
 
 
 .Or {
-
     justify-content: center;
     margin-left: auto;
     margin-top: auto;
     margin-right: auto;
     margin-bottom: auto;
-
 }
 .Login {
-
     width: 450px;
     padding: 30px;
-    
     margin-top: 100px;
     background: rgba(43, 224, 170, 0.3);
+    /* padding-bottom: 20%; */
+    margin-right: auto;
+    margin-left: auto;
     border-radius: 20px;
-    margin-right: 100px;
-    padding-bottom: 20%;
-    
+
 }
 
 /*--TITULO-----------------------*/
@@ -70,7 +64,6 @@ body{
     border: none;
     border-left: 10px solid #d9e4ea;
     transition: all .5s ease;
-
 }
 
 
