--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -58,5 +58,15 @@
             <% });%>
         </div>
     </div>
+    <script> document.addEventListener('gesturestart', function (e) {
+        e.preventDefault();
+    });></script>
+    <script> document.addEventListener('touchmove', function(event) {
+        event = event.originalEvent || event;
+        if(event.scale > 1) {
+          event.preventDefault();
+        }
+      }, false);</script>
 </body>
+
 </html>
