--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -5,10 +5,11 @@
   <body>
     <header>
       <%- include('../partials/header') %>
+      <%- include('../partials/categoriesCarouselDesktop') %>
       <%- include('../partials/categoriesCarousel') %>
     </header>
-    <div class="contenedor">
-      
+    <div class="contenedor Login">
+      <h1 class="titulo">Iniciar sesion</h1>
         <div>
           <form action="login" method="POST" id="form-login">
             <!-- Error lanzado por backend -->
@@ -30,8 +31,8 @@
             <!-- FIN. Error lanzado por frontend -->
 
               <div class="">
-                <label for="email">Email</label>
-                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico" value="<%= locals.old && old.email ? old.email :''%>">
+                <!-- <label for="email">Email</label> -->
+                <input class="cajas" type="text" name="email" id="email" placeholder="Correo electrónico" value="<%= locals.old && old.email ? old.email :''%>">
               </div>
               <!-- Error lanzado por backend -->
               <% if (locals.errors && locals.errors.email && (errors.email.value == '')) { %>
@@ -43,8 +44,8 @@
 
               
               <div class="">
-                <label for="password">Contraseña</label>
-                <input class="" type="password" name="password" id="password" placeholder="Contraseña">
+                <!-- <label for="password">Contraseña</label> -->
+                <input class="cajas" type="password" name="password" id="password" placeholder="Contraseña">
               </div>
               <!-- Error lanzado por backend -->
               <% if (locals.errors && locals.errors.password && (errors.password.value == '')) { %>
@@ -63,7 +64,7 @@
                 </label>
               </div>
               <div>
-                <button type="submit">Iniciar sesión</button>
+                <button class="btn" type="submit">Iniciar sesión</button>
               </div>
           </form>
         </div>
