--- a/site/src/views/users/registro.ejs
+++ b/site/src/views/users/registro.ejs
@@ -5,15 +5,17 @@
   <body>
     <header>
       <%- include('../partials/header') %>
+      <%- include('../partials/categoriesCarouselDesktop') %>
       <%- include('../partials/categoriesCarousel') %>
     </header>
-    <div class="contenedor">
-      
-        <div>
-          <form action="registro" method="POST" id="form-register">
+    <div>
+      <form class="form-reg-log" action="registro" method="POST" id="form-register">
+            <div class="contenedor">
+                <!--TITULO------------------------>
+                <h1 class="titulo">Registrarse</h1>
               <div class="">
-                <label for="email">Email</label>
-                <input class="" type="text" name="email" id="email" placeholder="Correo electrónico" value="<%= locals.old && old.email ? old.email :''%>" >
+                <!-- <label for="email">Email</label> -->
+                <input class="cajas" type="text" name="email" id="email" placeholder="Correo electrónico" value="<%= locals.old && old.email ? old.email :''%>" >
               </div>
               <!-- Error lanzado por frontend -->
               <div class="error-email error-message text-danger"> 
@@ -26,8 +28,8 @@
               <% } %> 
 
               <div class="">
-                <label for="fullName">Nombre Completo</label>
-                <input class="" type="text" name="fullName" id="fullName" placeholder="Nombre Completo" value="<%= locals.old && old.fullName ? old.fullName :''%>">
+                <!-- <label for="fullName">Nombre Completo</label> -->
+                <input class="cajas" type="text" name="fullName" id="fullName" placeholder="Nombre Completo" value="<%= locals.old && old.fullName ? old.fullName :''%>">
               </div>
 
               <!-- Error lanzado por frontend -->
@@ -41,8 +43,8 @@
               <% } %>
 
               <div class="">
-                <label for="password">Contraseña</label>
-                <input class="" type="password" name="password" id="password" placeholder="Contraseña" value="<%= locals.old && old.password ? old.password :''%>">
+                <!-- <label for="password">Contraseña</label> -->
+                <input class="cajas" type="password" name="password" id="password" placeholder="Contraseña" value="<%= locals.old && old.password ? old.password :''%>">
               </div>
 
               <!-- Error lanzado por frontend -->
@@ -55,7 +57,11 @@
                 </div> 
               <% } %>
               <div>
-                <button type="submit">Registrarte</button>
+                <!--TERMINOS-Y-CONDICIONES---------------------------------------------------------------------------------->
+              <p class="termino1"><input type="checkbox">&nbsp; Estoy de acuerdo con <a class="termino2" href="">Terminos y Condiciones</a></p>
+                <button class="btn" type="submit">Registrarte</button>
+                        <!--YA-TENGO-CUENTA----------------------------------------------------------->
+              <p class="tengo-cuenta"><a href="/usuario/login" class="tengo-cuenta">Ya tengo cuenta</a></p>
               </div>
           </form>
         </div>
