--- a/site/src/views/users/login.ejs
+++ b/site/src/views/users/login.ejs
@@ -65,6 +65,7 @@
               </div>
               <div>
                 <button class="btn" type="submit">Iniciar sesión</button>
+                <p class="tengo-cuenta"><a href="/usuario/registro" class="tengo-cuenta">No tenes cuenta? Registrate</a></p>
               </div>
           </form>
         </div>
