--- a/site/src/views/partials/categoriesCarouselDesktop.ejs
+++ b/site/src/views/partials/categoriesCarouselDesktop.ejs
@@ -1,3 +1,4 @@
+<div class="categoria_desktop_fondo">
 <div class="categoria_desktop">
     <nav class="menu-main">
         <% locals.categories.forEach(category => { %>
@@ -5,4 +6,5 @@
         <% });%>
             <a class="menu-inicio-2" href="/usuario/login">Iniciar sesión<i class="fas fa-user"></i></a>
     </nav>
+</div>
 </div>
