--- a/site/src/views/products/productCart.ejs
+++ b/site/src/views/products/productCart.ejs
@@ -63,11 +63,14 @@
                     <p>En esta compra ahorraste: <%= totalDiscount %></p>
                 </div>
             </div>
+            
+            <div class="producto-agregar">Continuar</div> 
         </div>
-    <div class="checkout">
+    <!-- <div class="checkout">
         <p id="subtotalAabonar2" class="subtotalAabonar">$272,00</p>
         <div class="producto-agregar">Continuar</div> 
-    </div></div>
+    </div> -->
+</div>
     </div>
 </body>
 </html>
