--- a/site/src/views/index.ejs
+++ b/site/src/views/index.ejs
@@ -10,7 +10,44 @@
     <%- include('partials/categoriesCarousel') %>
     </header>
     <div class="container">
-        <div id="home-catalogo">
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="http://www.heurisko.ar/otros/slide_1.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="http://www.heurisko.ar/otros/slide_2.png" class="d-block w-100" alt="...">
+              </div>
+              <div class="carousel-item">
+                <img src="http://www.heurisko.ar/otros/slide_3.png" class="d-block w-100" alt="...">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+
+          <div class="bienvenida-home">
+              <h1>TU SUPERMERCADO AHORA MAS CERCA</h1>
+              <h4>Bienvenido a la tienda online en donde podrás encontrar todo lo que hay en un supermercado, hipermercado, almacen de barrio o los chino.</h4>
+          </div>
+
+          <div class="como-comprar">
+              <img class="imagen-como-comprar" src="http://www.heurisko.ar/otros/como_comprar.png" alt="">
+          </div>
+
+        <!-- <div id="home-catalogo">
             <% categories.forEach(category => { %>
             <div id="catalogo-categoria">
                 <div class="catalogo-header">
@@ -23,7 +60,7 @@
                         <div class="producto-contenedor-secundario">
                             <div class="producto-header">
                                 <div class="producto-descuento <%= product.discount === '0%' ? 'ocultar' : '' %>"><%= product.discount%></div>
-                                <div class="producto-favorito"><i class="fas fa-heart"></i><!-- <i class="far fa-heart"></i> --></div>
+                                <div class="producto-favorito"><i class="fas fa-heart"></i></div>
                             </div>
                             <div class="producto-imagen">
                                 <img src= <%= product.image%>>
@@ -36,7 +73,7 @@
                                 </div>
                                 <div class="producto-precios">
                                     <span class="precio-nuestro"> <%= product.price%>
-                                    <span class="precio-competencia <%= product.discount === '0%' ? 'ocultar' : '' %>"> <%= product.oldPrice%> </span><!-- Cambiar a descuento -->
+                                    <span class="precio-competencia <%= product.discount === '0%' ? 'ocultar' : '' %>"> <%= product.oldPrice%> </span>
                                     </span>
                                 </div>
                                 <div id="botonera">
@@ -56,7 +93,7 @@
                 </div>
             </div>
             <% });%>
-        </div>
+        </div> -->
     </div>
     <script> document.addEventListener('gesturestart', function (e) {
         e.preventDefault();
