--- a/site/src/views/partials/head.ejs
+++ b/site/src/views/partials/head.ejs
@@ -16,9 +16,12 @@
     <link rel="stylesheet" type="text/css" href="/styles/home_new.css">
     <link rel="stylesheet" type="text/css" href="/styles/new_css_otros.css">
     <link rel="stylesheet" type="text/css" href="/styles/RegistroLogin.css">
+    <link rel="stylesheet" type="text/css" href="/styles/carousel.css">
     <script type="text/javascript" src="/js/cart.js"></script>
     <script type="text/javascript" src="/js/icons.js"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <script> document.addEventListener('gesturestart', function (e) {
         e.preventDefault();
     });></script>
